# farhand-amr-demo

./: .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh
config/: MID360_config.json
docs/diagnostics/: SCR-DIAG-003_LiDAR_Network_Diagnostic.md
docs/procedures/: SOP-HW-007_LiDAR_Replacement.md  SOP-HW-010_Motor_Fault_Recovery.md  SOP-HW-012_Battery_Replacement.md  SOP-MH-001_Gripper_Fault_Recovery.md  SOP-NW-001_WiFi_Reconnection.md  SOP-PM-001_Daily_Startup.md  SOP-PM-002_Weekly_Full_Audit.md
docs/robot/: BCR-001_Technical_Reference.md  Technical_Reference.md
docs/sensors/2d-lidar/: 2D_LiDAR_Reference.md
docs/sensors/depth-camera/: Depth_Camera_Reference.md
docs/training/: Field_Tech_Onboarding.md  Material_Handling_Safety.md
nodes/: battery_node.py  camera_node.py  depth_camera_node.py  drive_node.py  imu_node.py  lidar_2d_node.py  lidar_node.py  nav_sim_node.py  payload_node.py  stereo_camera_node.py
ros2_ws/src/bcr_bot/: package.xml  setup.cfg  setup.py
ros2_ws/src/bcr_bot/bcr_bot/: battery_node.py  depth_camera_node.py  drive_node.py  imu_node.py  lidar_2d_node.py  nav_sim_node.py  payload_node.py  stereo_camera_node.py
ros2_ws/src/bcr_bot/config/: fault_params.yaml  robot_params.yaml  sensor_params.yaml
ros2_ws/src/bcr_bot/launch/: bringup.launch.py  lidar.launch.py
ros2_ws/src/bcr_bot/urdf/: bcr_bot.urdf.xacro  macros.xacro  materials.xacro
scripts/: battery_report.sh  camera_diagnostic.sh  clear_faults.sh  drive_diagnostic.sh  lidar_diagnostic.sh  sensor_health_check.sh  simulate_fault.sh  start_lidar.sh
(+3 files in other folders)
